# GnarkPlayground

./: Cargo.toml  Makefile  README.md  ecdsa_verifier.go  ecdsa_verifier.h  generate_input.go  go.mod  libecdsa_verifier.h  test_c_interface.c  test_c_shared  witness_input.json
src/: lib.rs
test_mimc/: main.go  makefile
