
[package]
name = "ecdsa-verifier-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"

[lib]
name = "ecdsa_verifier_rs"
crate-type = ["cdylib", "rlib"]

# For Node.js bindings
[dependencies.neon]
version = "1.0"
optional = true
default-features = false
features = ["napi-6"]

# For WebAssembly
[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.js-sys]
version = "0.3"
optional = true

[dependencies.web-sys]
version = "0.3"
optional = true

[features]
default = []
nodejs = ["neon"]
wasm = ["wasm-bindgen", "js-sys", "web-sys"]